<resources>
    <string name="app_name">MSEmojis</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>

    <string name="main_list_empty">No favourites, you can add some</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="menu_smileys_and_emotion">Smileys &amp; Emotion</string>
    <string name="menu_people_and_body">People &amp; Body</string>
    <string name="menu_animals_and_nature">Animals &amp; Nature</string>
    <string name="menu_food_and_drink">Food &amp; Drink</string>
    <string name="menu_travel_and_places">Travel &amp; Places</string>
    <string name="menu_activities">Activities</string>
    <string name="menu_objects">Objects</string>
    <string name="menu_symbols">Symbols</string>
    <string name="menu_flags">Flags</string>
    <string name="menu_favourites">Favourites</string>
    <string name="emoji_image">Emoji Image</string>
    <string name="emoji_name">Emoji Name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>"
    <string name="menu_save">Save</string>
    <string name="menu_share">Share</string>
    <string name="menu_addShortCut">Add to launcher</string>
    <string name="detail_image">Image</string>
    <string name="detail_3d">3D</string>
    <string name="detail_color">Color</string>
    <string name="detail_flat">Flat</string>
    <string name="detail_highContrast">BW</string>
    <string name="detail_animated">Anim</string>
    <string name="checkbox_favourite">Favourite it</string>
    <string name="button_save">Save</string>
    <string name="button_menu">Menu</string>
    <string name="colorRadioGroup_default">Default</string>
    <string name="colorRadioGroup_light">Light</string>
    <string name="colorRadioGroup_dark">Dark</string>
    <string name="colorRadioGroup_medium">Medium</string>
    <string name="colorRadioGroup_mediumLight">Medium Light</string>
    <string name="colorRadioGroup_mediumDark">Medium Dark</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="general_header">General</string>
    <string name="appearance_header">Appearance</string>
    <string name="about_header">About</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="image_size_title">ImageQuality</string>
    <string name="theme_title">Theme</string>
    <string name="version_title">Version</string>
    <string name="sources_title">Sources</string>

    <string name="introduce_summary">An android app that collects microsoft fluent emojis</string>
    <string name="version_summary">Unknow</string>
    <string name="sources_summary">https://github.com/microsoft/fluentui-emoji</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <string name="settings">Settings</string>
</resources>