<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_favourites">

    <fragment
        android:id="@+id/nav_favourites"
        android:name="com.happymax.msemojigallery.MainFragment"
        android:label="@string/menu_favourites"
        tools:layout="@layout/fragment_main" >
        <argument android:name="category" app:argType="string" android:defaultValue="FAVOURITE"/>
    </fragment>

    <fragment
        android:id="@+id/nav_smileys_and_emotion"
        android:name="com.happymax.msemojigallery.MainFragment"
        android:label="@string/menu_smileys_and_emotion"
        tools:layout="@layout/fragment_main" >
        <argument android:name="category" app:argType="string" android:defaultValue="SMILEYS_AND_EMOTION"/>
    </fragment>

    <fragment
        android:id="@+id/nav_people_and_body"
        android:name="com.happymax.msemojigallery.MainFragment"
        android:label="@string/menu_people_and_body"
        tools:layout="@layout/fragment_main" >
        <argument android:name="category" app:argType="string" android:defaultValue="ALL"/>
    </fragment>

    <fragment
        android:id="@+id/nav_animals_and_nature"
        android:name="com.happymax.msemojigallery.MainFragment"
        android:label="@string/menu_animals_and_nature"
        tools:layout="@layout/fragment_main" >
        <argument android:name="category" app:argType="string" android:defaultValue="ALL"/>
    </fragment>

    <fragment
        android:id="@+id/nav_food_and_drink"
        android:name="com.happymax.msemojigallery.MainFragment"
        android:label="@string/menu_food_and_drink"
        tools:layout="@layout/fragment_main" >
        <argument android:name="category" app:argType="string" android:defaultValue="ALL"/>
    </fragment>

    <fragment
        android:id="@+id/nav_travel_and_places"
        android:name="com.happymax.msemojigallery.MainFragment"
        android:label="@string/menu_travel_and_places"
        tools:layout="@layout/fragment_main" >
        <argument android:name="category" app:argType="string" android:defaultValue="ALL"/>
    </fragment>

    <fragment
        android:id="@+id/nav_activities"
        android:name="com.happymax.msemojigallery.MainFragment"
        android:label="@string/menu_activities"
        tools:layout="@layout/fragment_main" >
        <argument android:name="category" app:argType="string" android:defaultValue="ALL"/>
    </fragment>

    <fragment
        android:id="@+id/nav_objects"
        android:name="com.happymax.msemojigallery.MainFragment"
        android:label="@string/menu_objects"
        tools:layout="@layout/fragment_main" >
        <argument android:name="category" app:argType="string" android:defaultValue="ALL"/>
    </fragment>

    <fragment
        android:id="@+id/nav_symbols"
        android:name="com.happymax.msemojigallery.MainFragment"
        android:label="@string/menu_symbols"
        tools:layout="@layout/fragment_main" >
        <argument android:name="category" app:argType="string" android:defaultValue="ALL"/>
    </fragment>

    <fragment
        android:id="@+id/nav_flags"
        android:name="com.happymax.msemojigallery.MainFragment"
        android:label="@string/menu_flags"
        tools:layout="@layout/fragment_main" >
        <argument android:name="category" app:argType="string" android:defaultValue="ALL"/>
    </fragment>

</navigation>